--- a/Html Css/三角箭头.html
+++ b/Html Css/三角箭头.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    .zxc {
+    .cxx {
       display: inline-block;
       width: 0;
       height: 0;
@@ -17,7 +17,7 @@
     }
   </style>
 </head>
-<div class="zxc"></div>
+<div class="cxx"></div>
 
 <body>
   <script>
