--- a/Html Css/三角箭头.html
+++ b/Html Css/三角箭头.html
@@ -10,10 +10,8 @@
       display: inline-block;
       width: 0;
       height: 0;
-      border-left: 100px solid transparent;
-      border-right: 100px solid transparent;
-      border-bottom: 300px solid red;
-      border-top: 100px solid transparent;
+      border: 100px solid;
+      border-color: transparent transparent red transparent;
     }
   </style>
 </head>
