--- a/Muc/2.css/选项卡.html
+++ b/Muc/2.css/选项卡.html
@@ -12,76 +12,90 @@
       padding: 0;
     }
 
-    .header {
+    li {
+      list-style: none;
+    }
+
+    ul {
       width: 100%;
       height: 150px;
-      border-bottom: 1px solid red;
       display: flex;
     }
 
-    .header span {
+    ul li {
       flex: 1;
-      text-align: center;
+      height: 150px;
+      background-color: gray;
       line-height: 150px;
+      text-align: center;
     }
 
-    .cont {
+    .content {
       width: 100%;
       height: 250px;
-      display: flex;
+      display: flex
     }
 
-    .cont div {
+    #cont {
       flex: 1;
-      text-align: center;
+      background-color: skyblue;
       line-height: 250px;
+      text-align: center;
       display: none;
-      background-color: red;
     }
 
-    .bgc {
+    .yw {
       background-color: yellow;
     }
 
     .show {
       display: block !important;
     }
+
+    /* .content {
+      display: none;
+    } */
   </style>
 </head>
 
 <body>
-  <header>
-    <div class="content">
-      <div class="header">
-        <span class="bgc">1</span>
-        <span>2</span>
-        <span>3</span>
-        <span>4</span>
-      </div>
-      <div class="cont">
-        <div class="show conts">1</div>
-        <div class="conts">2</div>
-        <div class="conts">3</div>
-        <div class="conts">4</div>
-      </div>
-    </div>
-  </header>
-  <!-- <div class="zxc" style="width: 200px;height: 200px;background-color: red;"></div> -->
+  <ul>
+    <li class='yw'>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+  </ul>
+  <div class="content" id="cont1">
+    <div id="cont">1</div>
+    <div id="cont">2</div>
+    <div id="cont">3</div>
+    <div id="cont">4</div>
+  </div>
   <script>
-    window.onload = function () {
-      let spans = document.getElementsByTagName('span');
-      let conts = document.getElementsByClassName('conts')
-      for (let i = 0; i < spans.length; i++) {
-        spans[i].index = i;
-        spans[i].onmouseover = function () {
-          for (let i = 0; i < spans.length; i++) {
-            spans[i].className = "";
-            conts[i].className = 'conts'
-          }
-          this.className = 'bgc'
-          conts[i].className = "conts show"
+    let lis = document.getElementsByTagName('li');
+    let conts = document.getElementById('cont');
+    let ul = document.getElementsByTagName('ul');
+    let content = document.querySelector('.content');
+    let header = document.querySelector('.header');
+    for (let i = 0; i < lis.length; i++) {
+      lis[i].index = i;
+
+
+      lis[i].onmouseover = function () {
+        for (let i = 0; i < lis.length; i++) {
+          lis[i].className = '';
+          cont[i].className = '';
         }
+        this.className = 'yw';
+        cont[i].className = 'show';
       }
+    }
+
+    ul[0].onmouseover = function () {
+      content.style.display = 'block';
+    }
+    ul[0].onmouseout = function () {
+      content.style.display = 'none';
     }
   </script>
 </body>
